--- a/Video- Backgound/index.html
+++ b/Video- Backgound/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="pics/bg_vid.mp4" type="video/mp4">
+        <source src="your video file" type="video/mp4">
     </video>
 </body>
 </html>
